update profile-batman mobile-desktop

--- a/index.html
+++ b/index.html
@@ -46,9 +46,23 @@
         </section>
         <section class="primer-seccion">
             <img class="corazon" src="images/corazon.png" alt="corazon">
-            <img class="fondo fondo-batman" src="images/fondo-superman.png" alt="fondo batman">
+            <img class="fondo fondo-superman" src="images/fondo-superman.png" alt="fondo batman">
             <div class="contenedor-perfil">
-                <img class="perfil perfil-batman" src="images/superman.png" alt="superman">
+                <img class="perfil perfils perfil-superman mostrar-celular" src="images/superman.png" alt="superman">
+                <img class="perfil perfils perfil-superman mostrar-tablet" src="images/superman-tablet.png" alt="superman">
+            </div>
+            <div class="primer-seccion_contenido">
+                <h2>superman</h2>
+                <p>Batman (conocido inicialmente como Bat-Man) es un personaje creado por los estadounidenses Bob Kane y Bill Finger, y propiedad de DC Comics. Apareció por primera vez en la historia titulada «El caso del sindicato químico» de la revista Detective Comics N.º 27, lanzada por la editorial National Publications el 30/3/1939.
+                </p>
+                <input class="boton" type="button" value="ver más">
+            </div>
+        </section>
+        <section class="visible primer-seccion">
+            <img class="corazon" src="images/corazon.png" alt="corazon">
+            <img class="fondo fondo-batman" src="images/fondo-queen.png" alt="fondo batman">
+            <div class="contenedor-perfil">
+                <img class="perfil perfil-batman" src="images/queen.png" alt="superman">
             </div>
             <div class="primer-seccion_contenido">
                 <h2>batman</h2>
