--- a/index.html
+++ b/index.html
@@ -74,8 +74,8 @@
     </main>
     <footer>
         <p>Todos los derechos reservados a FRONT END 1</p>
-        <a href="#">
-            <img src="images/github.png" alt="GitHub">
+        <a id="footer-img-contenedor" href="#">
+            <img id="footer-img-contenedor_imagen" src="images/github.png" alt="GitHub">
         </a>
     </footer>
 </body>
